test_case/rust-lang_rust/44731_331061083.rs
rust
#![feature(conservative_impl_trait)]
fn foo() -> Box<impl Clone> { //~ ERROR E0283
    loop {}
}
fn main() {
}
